--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ div{
     
     height: 56px;
     width: 374px;
-    
     display: flex;
     flex-direction: column;
     margin-left: auto;
@@ -82,12 +81,25 @@ color: #7C4032;
 }
 
 .botao{
-
-border-radius: 20%;
-background-color: transparent;
-border-color: #7C4032;
-height: 100px;
-width: 100px;
-margin-top: 100px;
+    height: 46px;
+    width: 143px;
+    margin-right: 879px;
+    margin-top: -275px;
+    background-color: none;
+    border-radius: 30px;
+    border: 4px solid #7C4032;
 }
+
+.texto_botao{
+    height: 124px;
+    width: 1086px;
+    margin-right: 891px;
+    margin-top: -41px;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    color: #7C4032;
+}
+
+
+
 
